Fix photos list spacing and width

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -307,7 +307,7 @@ blockquote p,
 }
 
 /* adjustment when very small */
-@media only screen and (max-width: 640px) {
+@media only screen and (max-width: 660px) {
 
   .post-list,
   .post-list > .post-list-info {
